--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -2,6 +2,7 @@
   position: relative;
   height: 100px;
   display: flex;
+  align-items:center;
   justify-content: space-between;
   .header__overlay {
     position: fixed;
