--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items:center;
   justify-content: space-between;
+  margin-bottom:40px;
   .header__overlay {
     position: fixed;
     top: 0;
